Restructuring nav to have page name instead of URL

--- a/src/index.html
+++ b/src/index.html
@@ -42,19 +42,19 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul id="main-nav" class="nav navbar-nav navbar-right">
             <li>
-              <a data-url="html-pages/about.html" href="#">
+              <a data-page-name="about" href="#">
                 About
                 <div class="nav-underline"></div>
               </a>
             </li>
             <li>
-              <a data-url="html-pages/work.html" href="#">
+              <a data-page-name="work" href="#">
                 Work
                 <div class="nav-underline"></div>
               </a>
             </li>
             <li>              
-              <a data-url="html-pages/contact.html" href="#">
+              <a data-page-name="contact" href="#">
                 Contact
                 <div class="nav-underline"></div>
               </a>
